--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,3 +35,22 @@ body{
 .category_info table{
     width: 100%;
 }
+.product{
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.product h3{
+    margin-bottom: 20px;
+}
+.old_price{
+    text-decoration :line-through;
+    margin-bottom: 0;
+}
+.new_price{
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
